# angreal-mcp

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.angreal/: __init__.py  init.py  task_build.py  task_call_testing.py  task_check.py  task_fmt.py  task_lint.py  task_test.py
.github/workflows/: release.yml  test.yml
examples/: claude_code_setup.md  claude_desktop_config.json  cline_config.json  usage_examples.md
src/: angreal.rs  lib.rs  main.rs  mcp.rs
src/prompts/: angreal_check.md  angreal_run.md  angreal_tree.md
tests/: integration_tests.rs
wip/: angreal_mcp_implementation_plan.md
