[package]
name = "angreal_mcp"
version = "0.4.0"
edition = "2021"
authors = ["Dylan Storey <dylan.storey@gmail.com>"]
description = "MCP (Model Context Protocol) server for angreal project discovery and automation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/colliery-io/angreal-mcp"
homepage = "https://github.com/colliery-io/angreal-mcp"
documentation = "https://github.com/colliery-io/angreal-mcp#readme"
readme = "README.md"
keywords = ["mcp", "angreal", "automation", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]
default-run = "angreal_mcp"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.0"
mockall = "0.11"
tokio-test = "0.4"

[[bin]]
name = "angreal_mcp"
path = "src/main.rs"
